--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.60.0",
     "vite": "^4.0.0"
   },
   "repository": {
