--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,8 @@ root = true
 [*]
 charset = utf-8
 insert_final_newline = true
-end_of_line = lf
 indent_style = space
 indent_size = 4
-max_line_length = 80
+max_line_length = 140
+end_of_line = crlf
+ij_vue_indent_children_of_top_level = none
