--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@vueuse/core": "^9.12.0",
         "axios": "^1.3.2",
+        "fundamental-styles": "^0.29.4",
         "pinia": "^2.0.28",
         "vue": "^3.2.45",
         "vue-i18n": "^9.2.2",
-        "vue-router": "^4.1.6",
-        "@vueuse/core": "^9.12.0"
+        "vue-router": "^4.1.6"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
