--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@vueuse/core": "^9.12.0",
         "axios": "^1.3.2",
+        "bootstrap": "^5.3.0",
         "fundamental-styles": "^0.29.4",
         "pinia": "^2.0.28",
         "vue": "^3.2.45",
