--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@vueuse/core": "^9.12.0",
         "axios": "^1.3.2",
-        "fundamental-styles": "^0.29.4",
+        "bootstrap": "^5.3.1",
         "pinia": "^2.0.28",
         "vue": "^3.2.45",
         "vue-i18n": "^9.2.2",
@@ -23,6 +23,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "eslint": "^8.22.0",
         "eslint-plugin-vue": "^9.3.0",
+        "rtlcss": "^4.1.0",
         "vite": "^4.0.0"
     },
     "repository": {
