--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "axios": "^1.3.2",
         "bootstrap": "^5.3.1",
+        "moment-jalaali": "^0.10.0",
+        "pasoonate": "^1.2.5",
         "pinia": "^2.0.28",
         "vue": "^3.3.4",
         "vue-i18n": "^9.2.2",
