--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://www.eghamat24.com/api/panel
+VITE_API_BASE_URL=https://jsonplaceholder.typicode.com
 VITE_API_TIMEOUT=10000
