--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^1.3.2",
         "bootstrap": "^5.3.1",
         "bootstrap-icons": "^1.11.2",
+        "idb": "^8.0.0",
         "pasoonate": "^1.2.5",
         "pinia": "^2.0.28",
         "vue": "^3.3.4",
